<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/blue_300">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:id="@+id/idLL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/item_name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="2"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:padding="4dp"
                android:text="@string/item_name"/>

            <TextView
                android:id="@+id/quantity_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="@string/quantity"/>

            <TextView
                android:id="@+id/rate_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="0.5"
                android:padding="4dp"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/rate"/>

            <ImageView
                android:id="@+id/delete_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="0.1"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_delete"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_total_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_below="@+id/idLL1"
            android:textSize="15sp"
            android:padding="4dp"
            android:text="@string/total_cost"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/total_amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idLL1"
            android:layout_alignParentEnd="true"
            android:text="@string/amt"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:padding="4dp"
            android:layout_margin="3dp"/>


    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>