<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_500">

        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add items to Cart"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/yellow_300"
            android:textSize="20sp"
            android:padding="4dp"
            android:layout_margin="4dp"/>

        <LinearLayout
            android:id="@+id/addLL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/tv_heading">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/yellow_300"
                android:layout_margin="5dp"
                android:hint="@string/enter_item_name"
                android:textColorHint="@color/yellow_300"
                app:hintTextColor="@color/yellow_300"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_itemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColorHint="@color/yellow_300"
                    android:textColor="@color/yellow_300"
                    android:textSize="14sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/yellow_300"
                android:layout_margin="5dp"
                android:hint="@string/enter_item_quantity"
                android:textColorHint="@color/yellow_300"
                app:hintTextColor="@color/yellow_300"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_itemQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColorHint="@color/yellow_300"
                    android:textColor="@color/yellow_300"
                    android:textSize="14sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/yellow_300"
                android:layout_margin="5dp"
                android:hint="@string/enter_item_price"
                android:textColorHint="@color/yellow_300"
                app:hintTextColor="@color/yellow_300"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_itemPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/yellow_300"
                    android:textColor="@color/yellow_300"
                    android:textSize="14sp"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/addLL1"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textSize="15sp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:background="@drawable/custom_button"/>

            <Button
                android:id="@+id/add_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/add"
                android:textAllCaps="false" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>